Add additional jvm args to loom run configurations
Signed-off-by: solonovamax <solonovamax@12oclockpoint.com>